# JKPS

./: .gitignore  CMakeLists.txt  JKPS_errlog.txt
Headers/: Application.hpp  Button.hpp  ConfigHelper.hpp  GfxButton.hpp  KeysPerSecondGraph.hpp  LogButton.hpp  LogicalParameter.hpp  Menu.hpp  Palette.hpp  ParameterLine.hpp  ResourceHolder.inl  Settings.hpp  StringHelper.hpp  StyleWizard.hpp  Utility.hpp
Headers/Default media/Fonts/: KPSWindowTextFont.hpp  MainProgramFont.hpp  RobotoMono.hpp  arial_monospaced.hpp
Headers/Default media/Textures/: AnimationTexture.hpp  BackgroundTexture.hpp  ButtonTexture.hpp  GreenscreenBGTexture.hpp  IconTexture.hpp  KeyPressVisTexture.hpp  RGB-Circle.hpp  RefreshTexture.hpp  vMark.hpp  xMark.hpp
Resources/: presets.json  templates.json  themes.json
Source/: Application.cpp  Button.cpp  ConfigHelper.cpp  GfxButton.cpp  GfxButtonSelector.cpp  GfxParameter.cpp  GfxStatisticsLine.cpp  KPSWindow.cpp  KeysPerSecondGraph.cpp  LogButton.cpp  LogicalParameter.cpp  Menu.cpp  Palette.cpp  ParameterLine.cpp  Settings.cpp  StatisticLinesPositioner.cpp  StringHelper.cpp  StyleWizard.cpp  Utility.cpp
Source/Default media/Fonts/: KPSWindowTextFont.cpp  MainProgramFont.cpp  RobotoMono.cpp  arial_monospaced.cpp
Source/Default media/Textures/: AnimationTexture.cpp  BackgroundTexture.cpp  ButtonTexture.cpp  GreenscreenBGTexture.cpp  IconTexture.cpp  KeyPressVisTexture.cpp  RGB-Circle.cpp  RefreshTexture.cpp  vMark.cpp  xMark.cpp
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-07-12-jkps-core-hygiene-structural-cleanup.md
(+1 files in other folders)
